# NekoLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Core/: CMakeLists.txt
Core/bench/: bench_queue.cpp
Core/include/container/: fixed_vector.h  index_based_container.h  queue.h  span.h  stack.h  vector.h
Core/include/math/: angle.h  vec2.h
Core/include/memory/: allocator.h  freelist_allocator.h  linear_allocator.h  pool_allocator.h  proxy_allocator.h  stack_allocator.h  unique_ptr.h
Core/include/thread/: job_system.h
Core/samples/: data_race.cpp
Core/src/memory/: allocator.cpp  freelist_allocator.cpp  linear_allocator.cpp  proxy_allocator.cpp  stack_allocator.cpp
Core/src/thread/: job_system.cpp
Core/test/: test_allocator.cpp  test_angle.cpp  test_job_system.cpp
Core/test/container/: rule_of_five.h  test_fixed_vector.cpp  test_index_based_container.cpp  test_queue.cpp  test_span.cpp  test_stack.cpp  test_vector.cpp
Core/test/maths/: test_angle.cpp  test_vec2.cpp
Core/test/memory/: test_allocator.cpp  test_unique_ptr.cpp
Core/test/thread/: test_job_system.cpp
